# loop

./: .gitignore  README.md
Data/: labels_1.txt  labels_esp_music_120cm_1.txt  labels_esp_music_120cm_10.txt  labels_esp_music_120cm_3.txt  labels_esp_music_120cm_5.txt  labels_esp_music_120cm_6.txt  labels_esp_music_120cm_7.txt  labels_esp_music_120cm_8.txt  labels_esp_music_120cm_9.txt  labels_esp_music_30cm_1.txt  labels_esp_music_30cm_10.txt  labels_esp_music_30cm_11.txt  labels_esp_music_30cm_12.txt  labels_esp_music_30cm_2.txt  labels_esp_music_30cm_3.txt  labels_esp_music_30cm_4.txt  labels_esp_music_30cm_5.txt  labels_esp_music_30cm_6.txt  labels_esp_music_30cm_7.txt  labels_esp_music_30cm_8.txt  labels_esp_music_30cm_9.txt  labels_esp_noise_30cm_1.txt  labels_esp_noise_30cm_3.txt  labels_esp_radio_30cm_1.txt  labels_esp_radio_30cm_2.txt  labels_esp_radio_30cm_3.txt  labels_esp_radio_30cm_4.txt  labels_esp_radio_30cm_5.txt  labels_zoom_2.txt  labels_zoom_3.txt  labels_zoom_4.txt  labels_zoom_5.txt  labels_zoom_6.txt  makefile  octave_fft.m
ESP-32/: CMakeLists.txt
Python/: main.py  preprocess.py  requirements.txt  requirements_mac_m.txt  test_tflite_model.py  tinyML_part2.ipynb  tune_hyperparameters.py
esp32_metric/: CMakeLists.txt  README.md
esp32_metric/components/models/: CMakeLists.txt  Kconfig  test_data.c  test_data2.c  test_quantized.c
esp32_metric/components/models/include_v1/: model_v1.h
esp32_metric/components/models/include_v2/: test_data2.h
esp32_metric/components/models/include_v2/model_v2_quan/: test_quantized.h
test/: plot_testdata.m
(+19 files in other folders)
